add account test
